# OfflineCodePractice

./: .gitignore  AI_PROVIDER_GUIDE.md  CHANGELOG.md  DESKTOP-APP-GUIDE-zh.md  DESKTOP-APP-GUIDE.md  LICENSE  MODIFY-PROBLEMS-GUIDE.md  README-zh.md  README.md  build-mac.sh  build-windows.bat  build-windows.ps1  electron-builder.config.js  electron-main.js  next.config.js  package-lock.json  package.json  tsconfig.json  vercel.json
.github/workflows/: deploy-pages.yml  release.yml
backend/: .gitignore  ARCHITECTURE.md  Cargo.toml  DEPLOYMENT-NOTES.md  IMPLEMENTATION-SUMMARY.md  QUICKSTART.md  README-zh.md  README.md  SECURITY-AUDIT.md  SECURITY-CHECKLIST.md  SECURITY-FIXES-SUMMARY.md  SECURITY-IMPROVEMENTS.md  env.example  schema.sql
backend/src/: error.rs  main.rs
backend/src/auth/: mod.rs  oauth_state.rs
backend/src/handlers/: auth.rs  market.rs  mod.rs
backend/src/middleware/: mod.rs  rate_limit.rs  security_headers.rs
backend/src/models/: mod.rs
docs/: 404.html  SITEMAP_GUIDE.md  index.html  robots.txt  site.webmanifest  sitemap.xml
docs/assets/: site.css  site.js
docs/zh/: index.html
locales/: en.json  zh.json
pages/: add-problem.tsx  generator.tsx  index.tsx  manage.tsx  market.tsx  settings.tsx  stats.tsx
pages/api/: add-problem.ts  ai-chat.ts  ai-solution.ts  delete-problems.ts  generate-problem.ts  import-from-folder.ts  import-problems.ts  problems.ts  update-problem.ts
pages/problems/: [id].tsx
scripts/: generate-icons.js  release.sh
src/components/: AIChatDialog.tsx  CodeRunner.tsx  ContributionHeatmap.tsx  MarkdownRenderer.tsx  (+6 more)
(+4 files in other folders)
